--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -615,3 +615,18 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+@import url("https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap");
+
+#sendButton {
+  /* background-image: url(../images/send.png); */
+  height: 96px;
+}
+
+#wiredTextArea {
+  display: block;
+  margin: 0 auto;
+  max-width: 960;
+  padding: 1.45rem 1.0875rem;
+  font-family: "Nanum Pen", "cursive";
+}
