--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -619,8 +619,10 @@ pre tt:after {
 @import url("https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap");
 
 #sendButton {
-  /* background-image: url(../images/send.png); */
+  background-image: url(../images/send.png);
+  background-color: transparent;
   height: 96px;
+  width: 96px;
 }
 
 #wiredTextArea {
