--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #0c101e;
 }
 body {
   margin: 0;
@@ -446,7 +447,6 @@ form {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
 }
 noscript {
   margin-left: 0;
@@ -619,14 +619,75 @@ pre tt:after {
 @import url("https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap");
 
 #sendButton {
-  /* background-image: url(../images/send.png); */
+  background-image: url(../images/send.png);
   height: 96px;
+  width: 96px;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  position: absolute;
+  border-radius: 48px;
+  left: 46.32%;
+  right: 47.02%;
+  top: 60%;
 }
 
-#wiredTextArea {
-  display: block;
-  margin: 0 auto;
-  max-width: 960;
-  padding: 1.45rem 1.0875rem;
-  font-family: "Nanum Pen", "cursive";
+input#messageInput {
+  box-sizing: border-box;
+  width: 100%;
+  position: absolute;
+  top: 35%;
+  font-family: "Nanum Pen Script";
+  background-color: inherit;
+  border: none;
+  padding-left: 30%;
+  padding-right: 30%;
+  color: white;
+  font-size: 48px;
+}
+
+input::placeholder {
+  color: gray;
+  font-size: 48px;
+  text-align: center;
+  width: 100%;
+}
+
+input:focus {
+  outline: none;
+}
+
+.textTitle {
+  position: absolute;
+  left: 17.96%;
+  right: 17.96%;
+  top: 13%;
+  font-family: "Nanum Pen Script";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.5em;
+  line-height: 45px;
+  text-align: center;
+}
+
+div#shareLink {
+  display: inline-flex;
+  text-decoration: underline white;
+  font-size: 2em;
+}
+
+div#shareLink button {
+  background-image: url(../images/copy.png);
+  height: 96px;
+  width: 96px;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  background-color: inherit;
+  flex-shrink: 0;
+  margin: 3% 3%;
 }
