--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -616,11 +616,13 @@ pre tt:after {
   }
 }
 
-@import url("https://fonts.googleapis.com/css?family=Nanum+Pen+Script&display=swap");
-
-header {
+header * {
   color: white;
   text-decoration: none;
+  /* background: `rebeccapurple`; */
+  position: "absolute";
+  margin: 5px;
+  padding: 5px;
 }
 
 #sendButton {
