feat: debug wip

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -57,7 +57,7 @@ input#messageInput {
   padding-left: 30%;
   padding-right: 30%;
   color: white;
-  font-size: 48px;
+  font-size: 1.6em;
   height: 25%;
 }
 
